basic vocabs page, requests dependency

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     }
   ],
   "require": {
-    "erusev/parsedown": "1.6.1"
+    "erusev/parsedown": "1.6.1",
+    "rmccue/requests": "v1.7.0"
   }
 }
