--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "geosceinceaustralia/geosciml.org",
   "description": "Content of the GeoSciML website",
   "minimum-stability": "stable",
-  "license": "none",
+  "license": "CC-BY 4.0",
   "authors": [
     {
       "name": "Nicholas Car",
